--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-rc.1",
     "file-loader": "^6.2.0",
+    "marked": "^3.0.4",
     "sass": "1.26.10",
     "vite": "^1.0.0-rc.1"
   }
